--- a/IE104_Internet_CongNgheWeb/Tuan5/b14_BTthem/CSS/styles.css
+++ b/IE104_Internet_CongNgheWeb/Tuan5/b14_BTthem/CSS/styles.css
@@ -24,7 +24,14 @@
 .button {
     width: fit-content;
     border: 1px solid black;
+    border-radius: 5px;
     padding: 10px 20px 10px 20px;
+}
+
+.button:hover {
+    background-color: black;
+    color: white;
+    font-weight: bold;
 }
 
 .titleInfo {
