--- a/IE104_Internet_CongNgheWeb/LAB/Bai_tap_tuan/W2/6 - ChuongTrinhHoc/CSS/styles.css
+++ b/IE104_Internet_CongNgheWeb/LAB/Bai_tap_tuan/W2/6 - ChuongTrinhHoc/CSS/styles.css
@@ -3,7 +3,10 @@ body {
     background-repeat: repeat-x, no-repeat;
     background-position: 0px 0px, 240px 320px;
 }
-
+.backgroundInfo {
+    
+    height: 100vh;
+}
 .titleInfo {
     font-size: 30px;
     font-weight: bold;
